@@ -782,7 +782,7 @@ namespace MeGUI
             if (File.Exists(strLocalUpdateXML))
                 MainForm.Instance.Settings.AutoUpdateSession = true;
 
-            UpdateWindow update = new UpdateWindow(this, this.Settings);
+            UpdateWindow update = new UpdateWindow(this, this.Settings, false);
             update.GetUpdateData(true);
             bool bIsComponentMissing = UpdateWindow.isComponentMissing();
             if (bIsComponentMissing || update.HasUpdatableFiles()) // If there are updated or missing files, display the window
@@ -841,7 +841,7 @@ namespace MeGUI
 
         private void mnuUpdate_Click(object sender, EventArgs e)
         {
-            UpdateWindow update = new UpdateWindow(this, this.Settings);
+            UpdateWindow update = new UpdateWindow(this, this.Settings, false);
             update.ShowDialog();
         }
 
@@ -939,7 +939,7 @@ namespace MeGUI
 
             if (parser.upgradeData.Count > 0)
             {
-                UpdateWindow update = new UpdateWindow(this, Settings);
+                UpdateWindow update = new UpdateWindow(this, Settings, false);
                 foreach (string file in parser.upgradeData.Keys)
                     update.UpdateUploadDate(file, parser.upgradeData[file]);
                 update.SaveSettings();
@@ -1421,8 +1421,12 @@ namespace MeGUI
 
             getVersionInformation();
 
+            if (_updateLog == null)
+                _updateLog = Log.Info("Update detection");
             if (settings.AutoUpdate)
                 startUpdateCheck();
+            else
+                _updateLog.LogEvent("Automatic update is disabled");
 
             if (settings.AutoStartQueueStartup)
                 jobControl1.StartAll(false);
