@@ -1,3 +1,4 @@
+2217 [Update] fixed a problem if the automatic update check is disabled and components are missing
 2216 [AVS Script Creator] fixed handling of custom FFMS index file location
 2215 [OneClick] always mux output file
 2214 [MKVExtract] fixed handling of input file name which contains error or warning
